unpackaged/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Specifies the brand to which the product belongs</description>
        <label>Brand</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baby Cakes</fullName>
                </value>
                <value>
                    <fullName>Black &amp; Decker</fullName>
                </value>
                <value>
                    <fullName>Breadman</fullName>
                </value>
                <value>
                    <fullName>Cooks</fullName>
                </value>
                <value>
                    <fullName>Copper Chef</fullName>
                </value>
                <value>
                    <fullName>Emeril Lagasse</fullName>
                </value>
                <value>
                    <fullName>Farberware</fullName>
                </value>
                <value>
                    <fullName>George Foreman</fullName>
                </value>
                <value>
                    <fullName>Juiceman</fullName>
                </value>
                <value>
                    <fullName>LUMABELLA</fullName>
                </value>
                <value>
                    <fullName>Luma Bella</fullName>
                </value>
                <value>
                    <fullName>Maxim</fullName>
                </value>
                <value>
                    <fullName>Melitta</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PowerXL</fullName>
                </value>
                <value>
                    <fullName>REMINGTON</fullName>
                </value>
                <value>
                    <fullName>Russell Hobbs</fullName>
                </value>
                <value>
                    <fullName>Toastmaster</fullName>
                </value>
                <value>
                    <fullName>Westinghouse</fullName>
                </value>
                <value>
                    <fullName>Windmere</fullName>
                </value>
                <value>
                    <fullName>Power (Tristar)</fullName>
                    <isActive>false</isActive>
                    <label>Power (Tristar)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Provides a detailed summary or notes.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Indicates the business division the product falls under, such as Appliance Home or Personal Care.</description>
        <label>Division</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appliance Home</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <description>Product&apos;s unique model identifier</description>
        <label>Model Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Classifies the product into a category</description>
        <label>Product Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>Beverage</fullName>
                </value>
                <value>
                    <fullName>Food Preparation</fullName>
                </value>
                <value>
                    <fullName>Garment</fullName>
                </value>
                <value>
                    <fullName>Grills</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Haircare</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Male Grooming</fullName>
                </value>
                <value>
                    <fullName>Female Grooming</fullName>
                </value>
                <value>
                    <fullName>Male Shave</fullName>
                </value>
                <value>
                    <fullName>Spare Parts</fullName>
                </value>
                <value>
                    <fullName>Female Shave</fullName>
                </value>
                <value>
                    <fullName>Beauty and Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Specifies the exact product type or line</description>
        <label>Product Line</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFTO</fullName>
                </value>
                <value>
                    <fullName>Air Fry Ovens</fullName>
                </value>
                <value>
                    <fullName>Air-Styler</fullName>
                </value>
                <value>
                    <fullName>Bikini Trimmer</fullName>
                </value>
                <value>
                    <fullName>Blenders</fullName>
                </value>
                <value>
                    <fullName>Body Groomer</fullName>
                </value>
                <value>
                    <fullName>Bread Makers</fullName>
                </value>
                <value>
                    <fullName>Brushes</fullName>
                </value>
                <value>
                    <fullName>Can Openers</fullName>
                </value>
                <value>
                    <fullName>Classic Irons</fullName>
                </value>
                <value>
                    <fullName>Coffee Grinders</fullName>
                </value>
                <value>
                    <fullName>Coffee Makers</fullName>
                </value>
                <value>
                    <fullName>Container Cooking - Other</fullName>
                </value>
                <value>
                    <fullName>Crepe Makers</fullName>
                </value>
                <value>
                    <fullName>Curling Iron</fullName>
                </value>
                <value>
                    <fullName>Deep Fryers</fullName>
                </value>
                <value>
                    <fullName>Detail Trimmer</fullName>
                </value>
                <value>
                    <fullName>Digital Steam Irons</fullName>
                </value>
                <value>
                    <fullName>Dryer</fullName>
                </value>
                <value>
                    <fullName>Dual Foil</fullName>
                </value>
                <value>
                    <fullName>Electric Knives</fullName>
                </value>
                <value>
                    <fullName>Epilator</fullName>
                </value>
                <value>
                    <fullName>Facial Brush</fullName>
                </value>
                <value>
                    <fullName>Fan Heater</fullName>
                </value>
                <value>
                    <fullName>Foil</fullName>
                </value>
                <value>
                    <fullName>Food Processors</fullName>
                </value>
                <value>
                    <fullName>Food Steamers</fullName>
                </value>
                <value>
                    <fullName>Griddles/Skillets</fullName>
                </value>
                <value>
                    <fullName>Grills - Charcoal</fullName>
                </value>
                <value>
                    <fullName>Grills - Fixed Plate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Model_Number__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>